# mango-device

./: CMakeLists.txt  README.md
include/: CMakeLists.txt  mango_hn.h  mango_hn_types.h
src/gn/: CMakeLists.txt  mango_hn.c  mango_hn_gn.c
src/nuplus/: CMakeLists.txt
src/peak/: CMakeLists.txt
